Clip background image previews that overflow bounding box (bug 1029822)

--- a/src/media/css/create.styl
+++ b/src/media/css/create.styl
@@ -194,6 +194,7 @@
             height: 200px;
             width: 200px;
             margin: 20px auto;
+            overflow: hidden;
             position: relative;
             text-align: center;
             vertical-align: top;
